# Leafy

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
assets/models/: cube.mtl  plane.mtl
assets/saved/: config.ini
assets/shaders/: basic.frag  basic.vert  batch_basic.frag  batch_basic.vert  batch_fs.glsl  batch_passthrough.frag  batch_passthrough.vert  batch_shadow.frag  batch_shadow.vert  batch_vs.glsl  blur.frag  blur.vert  cube_shadow.frag  cube_shadow.vert  inst_basic.frag  inst_basic.vert  inst_passthrough.frag  inst_passthrough.vert  inst_shadow.vert  instance_basic.frag  instance_basic.vert  instance_fs.glsl  instance_passthrough.frag  instance_passthrough.vert  instance_vs.glsl  outline.frag  outline.vert  passthrough.frag  passthrough.vert  screen.frag  screen.vert  shadow.frag  shadow.vert  shadow_vs.glsl  skybox.frag  skybox.vert  sprite.frag  sprite.vert
assets/shaders/batch/: basic.frag  basic.vert  cube_shadow.frag  cube_shadow.geom  cube_shadow.vert  passthrough.frag  shadow.frag  shadow.vert
assets/shaders/instance/: basic.frag  basic.vert  cube_shadow.frag  cube_shadow.geom  passthrough.frag  passthrough.vert  shadow.frag
examples/2D/: app.rs  main.rs
examples/2d/: app.rs  main.rs
examples/3D/: app.rs  main.rs
examples/conways_game_of_life/: app.rs  main.rs
examples/fl_test/: app.rs  main.rs
examples/simplification/: app.rs  main.rs
examples/ui/: app.rs  main.rs
src/: app.rs  engine.rs  engine_builder.rs  lib.rs  main.rs  todo.txt
src/core/: engine.rs  lib.rs
src/core/ecs/: component.rs  entity.rs  entity_manager.rs  mod.rs  query.rs
src/core/rendering/: batch_renderer.rs  data.rs  font_renderer.rs  instance_renderer.rs  mesh.rs  shader.rs  sprite_renderer.rs  voxel_renderer.rs
src/core/state/: audio_state.rs  game_state.rs  mod.rs  video_state.rs
src/core/systems/: animation_system.rs  audio_system.rs  event_system.rs  mod.rs  rendering_system.rs  video_system.rs
src/core/utils/: constants.rs  file.rs  mod.rs  tools.rs
src/ecs/: asset_manager.rs  component.rs  entity.rs  entity_manager.rs  mod.rs  query.rs
src/gui/: font_renderer.rs  mod.rs  ui.rs
src/rendering/: batch_renderer.rs  data.rs  font.rs  font_renderer.rs  instance_renderer.rs  mesh.rs  mod.rs  shader.rs  sprite_renderer.rs  voxel_renderer.rs
src/state/: audio_state.rs  game_state.rs  mod.rs  video_state.rs
src/systems/: animation_system.rs  audio_system.rs  event_system.rs  general.rs  mod.rs  rendering_system.rs  video_system.rs
src/utils/: constants.rs  file.rs  math.rs  mod.rs  threading.rs  tools.rs
tests/: ecs_test.rs
