[package]
name = "falling_leaf"
version = "0.1.0"
edition = "2021"
authors = ["Luca Thomas"]
keywords = ["game", "engine", "gamedev"]
license = "MIT"
rust-version = "1.82.0"
build = "build.rs"
description = "A mini Game Engine written in Rust."
readme = "README.md"
repository = "https://github.com/luca-jt/Falling-Leaf"
exclude = ["tests"]

[lib]
name = "fl_core"
path = "src/lib.rs"

[features]
default = ["triangle_mesh", "plane_mesh"]
triangle_mesh = []
plane_mesh = []
cube_mesh = []
cone_mesh = []
cylinder_mesh = []
sphere_mesh = []
torus_mesh = []
all_meshes = ["triangle_mesh", "plane_mesh", "cube_mesh", "cone_mesh", "cylinder_mesh", "sphere_mesh", "torus_mesh"]

[[example]]
name = "3D"
path = "examples/3D/main.rs"

[[example]]
name = "ui"
path = "examples/ui/main.rs"

[[example]]
name = "conways_game_of_life"
path = "examples/conways_game_of_life/main.rs"

[[test]]
name = "ecs"
path = "tests/ecs_test.rs"

[dependencies]
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6.2"
stb_image = "0.3.0"
nalgebra-glm = "0.19.0"
gl = "0.14.0"
obj-rs = "0.7.1"
fontdue = "0.9.2"
fyrox-sound = "0.35.0"
fyrox-resource = "0.12.0"
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
winresource = "0.1.17"
