[package]
name = "falling_leaf"
version = "0.1.0"
edition = "2021"
authors = ["Luca Thomas"]
keywords = ["game", "engine", "gamedev"]
license = "MIT"
rust-version = "1.85.0"
build = "build.rs"
description = "A mini Game Engine written in Rust."
readme = "README.md"
repository = "https://github.com/luca-jt/Falling-Leaf"
exclude = ["tests"]

[lib]
name = "falling_leaf"
path = "src/lib.rs"

[[example]]
name = "3D"
path = "examples/3D/main.rs"

[[example]]
name = "2D"
path = "examples/2D/main.rs"

[[example]]
name = "ui"
path = "examples/ui/main.rs"

[[example]]
name = "conways_game_of_life"
path = "examples/conways_game_of_life/main.rs"

[[example]]
name = "simplification"
path = "examples/simplification/main.rs"

[[test]]
name = "ecs"
path = "tests/ecs_test.rs"

[dependencies]
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6.2"
stb_image = "0.3.0"
nalgebra-glm = "0.19.0"
gl = "0.14.0"
obj-rs = "0.7.1"
fontdue = "0.9.2"
fyrox-sound = "0.35.0"
fyrox-resource = "0.12.0"
log = "0.4.22"
env_logger = "0.11.5"
petgraph = "0.6.5"
itertools = "0.13.0"

[dependencies.bumpalo]
version = "3.17.0"
features = ["collections", "boxed"]


[build-dependencies]
winresource = "0.1.17"
