[package]
name = "leafy"
version = "0.1.0"
edition = "2021"
authors = ["Luca Thomas"]
keywords = ["game", "engine", "gamedev", "opengl"]
license = "MIT"
rust-version = "1.86.0"
build = "build.rs"
description = "A mini Game Engine in Rust."
readme = "README.md"
repository = "https://github.com/luca-jt/Leafy"
homepage = "https://luca-jt.github.io/projects/game-engine/"
exclude = ["tests"]

[lib]
name = "leafy"
path = "src/lib.rs"

[[example]]
name = "3D"
path = "examples/3D/main.rs"

[[example]]
name = "2D"
path = "examples/2D/main.rs"

[[example]]
name = "conways_game_of_life"
path = "examples/conways_game_of_life/main.rs"

[[example]]
name = "simplification"
path = "examples/simplification/main.rs"

[dependencies]
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6.2"
stb_image = "0.3.0"
nalgebra-glm = "0.19.0"
gl = "0.14.0"
tobj = "4.0.3"
fyrox-sound = "0.35.0"
fyrox-resource = "0.12.0"
log = "0.4.22"
env_logger = "0.11.5"
petgraph = "0.6.5"
itertools = "0.13.0"
bumpalo = { version = "3.17.0", features = ["collections", "boxed", "allocator-api2"] }
ahash = "0.8.11"
hashbrown = "0.15.2"
smallvec = { version = "1.15.1", features = ["const_new"] }

[build-dependencies]
winresource = "0.1.17"
